1.3.12
Added: Config for XP cost to use heart containers (default is 3 levels)
Added: An outline on your last (highest) heart, if you have more than 10. Can be disabled or changed to any color (default is white)
Added: Config for food consumption (exhaustion) of bonus player regen. Value also increased. Default is 0.1 (still many times less than vanilla regen), old value was 0.025.
Added: Particle effects for heart container and cursed/enchanted hearts (#57)
Added: Sound effects for cursed/enchanted hearts (#57)
Added: More tooltips!
Fixed: All rows of hearts drawing, instead of just the top two (FPS boost for players with lots of hearts)
Fixed: Some other minor heart rendering issues

1.3.11
Added: New area difficulty mode, SERVER_WIDE. A difficulty value is now tracked for the world and will be used if this new area mode is selected. Basically, this makes the difficulty system work more like Difficulty Life did. (#83)
Added: Max damage bonus config, which let's you cap the extra attack damage mobs get (#78)
Changed: Default blight speed and strength amplifiers reduced to 4 and 1 respectively. Your config will NOT update on its own. Change it if you want to.
Fixed: Disabling difficulty with the new game rule making mobs unkillable (#86)

1.3.10
Added: Config to toggle all bosses receiving extra health (#79)
Added: Configs to blacklist all hostile or all passive mobs from becoming blights. Passives are blacklisted by default. (#79)
Added: A game rule (ScalingHealthDiffficulty) to enable/disable the difficulty system. When disabled, mobs will no longer gain extra health and damage, regardless of any other settings. Players will also stop accumulating difficulty, but their current value will remain unchanged. (#80)

1.3.9