@@ -1,4 +1,5 @@
 1.3.12
+Added: Config to add difficulty multipliers for different moon phases. Category is difficulty/lunar_phases in the config file. This feature is disabled by default.
 Added: Config for XP cost to use heart containers (default is 3 levels)
 Added: An outline on your last (highest) heart, if you have more than 10. Can be disabled or changed to any color (default is white)
 Added: Config for food consumption (exhaustion) of bonus player regen. Value also increased. Default is 0.1 (still many times less than vanilla regen), old value was 0.025.
